--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,5 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+
+.responsive-div { background-color: lightblue; transition: width 0.5s, height 0.5s; } @media (max-width: 640px) { .responsive-div { width: 100%; height: 100%; } } @media (min-width: 641px) and (max-width: 768px) { .responsive-div { width: 75%; height: 75%; } } @media (min-width: 769px) and (max-width: 1024px) { .responsive-div { width: 66.67%; height: 66.67%; } } @media (min-width: 1025px) and (max-width: 1280px) { .responsive-div { width: 50%; height: 50%; } } @media (min-width: 1281px) { .responsive-div { width: 33.33%; height: 33.33%; } }
